--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,21 @@ body {
   text-align: center;
 }
 
+.login-btn {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.new-user-btn {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.new-task-btn {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
 .card {
   text-align: center;
   margin-bottom: 2%;
